--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         const elements = [
             '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection4" allowfullscreen></iframe>',
-            '<img src="image.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
+            '<img src="/mnt/data/image.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
             '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection2" allowfullscreen></iframe>'
         ];
 
