--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         let interval;
         
         const elements = [
-            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection4" allowfullscreen></iframe>',
-            '<img src="/mnt/data/image.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
-            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection2" allowfullscreen></iframe>'
+            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection2" allowfullscreen></iframe>',
+            '<img src="https://i.imgur.com/tuImagen.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
+            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection4" allowfullscreen></iframe>'
         ];
 
         function updateContent() {
