--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         let interval;
         
         const elements = [
-            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&chromeless=true&pageName=ReportSection2" allowfullscreen></iframe>',
+            '<iframe title="Pizarras TPM (2)" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection2" frameborder="0" allowFullScreen="true"></iframe>',
             '<img src="https://i.imgur.com/tuImagen.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
-            '<iframe src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&chromeless=true&pageName=ReportSection4" allowfullscreen></iframe>'
+            '<iframe title="Pizarras TPM (2)" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection4" frameborder="0" allowFullScreen="true"></iframe>'
         ];
 
         function updateContent() {
