--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height: 100vh;
             background-color: #f0f0f0;
         }
-        iframe, img {
+        iframe {
             width: 80vw;
             height: 80vh;
             border: none;
@@ -46,7 +46,7 @@
         
         const elements = [
             '<iframe title="Pizarras TPM (2)" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=0fa878d3d6193ac61889" frameborder="0" allowFullScreen="true"></iframe>',
-            '<img src="https://i.imgur.com/tuImagen.png" alt="Imagen Cargada" style="width: 80vw; height: 80vh;">',
+            '<iframe src="https://sites.google.com/ccu.cl/reportes?usp=sharing" sandbox="allow-scripts allow-same-origin allow-forms" frameborder="0" allowFullScreen="true"></iframe>',
             '<iframe title="Pizarras TPM (2)" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZThjYjIzOWQtMTQxNy00ZGRkLWJmZTAtYjFjY2ViNTZiMWYyIiwidCI6IjNlMWRkZWYwLTAxZjctNGYyZS1hM2NjLWYxNTkwMWVjZjA2ZCJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>'
         ];
 
